--- a/app/src/main/res/layout/toolbar_main.xml
+++ b/app/src/main/res/layout/toolbar_main.xml
@@ -7,7 +7,7 @@
         <androidx.appcompat.widget.Toolbar
             android:id="@+id/centeredToolbar"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="?android:attr/actionBarSize"
             android:minHeight="?android:attr/actionBarSize"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -17,7 +17,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_gravity="center"
+                android:gravity="center_vertical"
                 android:layout_marginEnd="20dp"
                 >
                 <ImageView
@@ -28,12 +28,24 @@
                     />
 
                 <TextView
+                    android:id="@+id/toolBarTitleTextView"
                     android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:text="CookUp"
+                    android:layout_height="wrap_content"
+                    android:text="@string/cookup"
+                    android:textSize="@dimen/text_caption"
+                    android:textStyle="bold"
                     android:layout_weight="1"
                     android:textAlignment="center"
                     />
+
+                <EditText
+                    android:id="@+id/toolBarSearchEdit"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:layout_marginHorizontal="10dp"
+                    android:visibility="gone"
+                    android:inputType="text" />
 
                 <ImageView
                     android:id="@+id/toolBarSearchButton"
