change default img

--- a/app/src/main/res/layout/fragment_new_recipe.xml
+++ b/app/src/main/res/layout/fragment_new_recipe.xml
@@ -58,7 +58,7 @@
                     android:layout_height="256dp"
                     android:layout_gravity="center_horizontal"
                     android:layout_marginTop="@dimen/def_margin_vertical"
-                    android:src="@mipmap/ic_launcher" />
+                    android:src="@drawable/add_photo" />
 
                 <TextView
                     android:id="@+id/recipeTitleTextView"
