--- a/app/src/main/res/layout/fragment_add_edit_ingredient.xml
+++ b/app/src/main/res/layout/fragment_add_edit_ingredient.xml
@@ -76,7 +76,7 @@
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/ingredientQuantityInputLayout"
-                android:layout_width="match_parent"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/def_margin_dense"
                 android:layout_weight="1"
