--- a/app/src/main/res/layout/toolbar_main.xml
+++ b/app/src/main/res/layout/toolbar_main.xml
@@ -31,7 +31,7 @@
                     android:id="@+id/toolBarTitleTextView"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:text="@string/cookup"
+                    android:text=""
                     android:textSize="@dimen/text_caption"
                     android:textStyle="bold"
                     android:layout_weight="1"
@@ -52,7 +52,23 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:src="@drawable/ic_baseline_search_24"
+                    android:layout_marginEnd="10dp"
+                    />
 
+
+                <ImageView
+                    android:id="@+id/toolBarExportButton"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/outline_insert_drive_file_24"
+                    />
+
+                <ProgressBar
+                    android:id="@+id/progressBar"
+                    style="?android:attr/progressBarStyleSmall"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:visibility="gone"
                     />
             </LinearLayout>
 
